name: aws-ec2
version: 0.3.8
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: See contributors list in README and LICENSE file
maintainer: MemCachier, Inc <code@memcachier.com>
homepage: https://github.com/memcachier/aws-ec2
synopsis: AWS EC2/VPC, ELB and CloudWatch client library for Haskell
description:
    AWS client library with focus on infrastructure services like EC2 (with VPC), ELB and CloudWatch, extension to <https://github.com/aristidb/aws>.
category: Network, Web, AWS, Cloud, Distributed Computing
author: Vladimir Kirillov; MemCachier, Inc

-- source-repository this
--     type: git
--     location: https://github.com/memcachier/aws-ec2.git
--     tag: 0.3.8

-- source-repository head
--     type: git
--     location: https://github.com/memcachier/aws-ec2.git

library
    exposed-modules:
        Aws.Canonical
        Aws.Query
        Aws.Query.TH
        Aws.Query.Types
        Aws.TH
        Aws.CloudWatch
        Aws.CloudWatch.Core
        Aws.CloudWatch.Types
        Aws.CloudWatch.Commands.PutMetricData
        Aws.Ec2
        Aws.Ec2.Core
        Aws.Ec2.TH
        Aws.Ec2.Types
        Aws.Ec2.Commands.AttachInternetGateway
        Aws.Ec2.Commands.AttachVolume
        Aws.Ec2.Commands.AuthorizeSecurityGroupIngress
        Aws.Ec2.Commands.CreateInternetGateway
        Aws.Ec2.Commands.CreatePlacementGroup
        Aws.Ec2.Commands.CreateRoute
        Aws.Ec2.Commands.CreateSecurityGroup
        Aws.Ec2.Commands.CreateSubnet
        Aws.Ec2.Commands.CreateTags
        Aws.Ec2.Commands.CreateVolume
        Aws.Ec2.Commands.CreateVpc
        Aws.Ec2.Commands.DescribeAvailabilityZones
        Aws.Ec2.Commands.DescribeImages
        Aws.Ec2.Commands.DescribeInstanceStatus
        Aws.Ec2.Commands.DescribeInstances
        Aws.Ec2.Commands.DescribeKeyPairs
        Aws.Ec2.Commands.DescribePlacementGroups
        Aws.Ec2.Commands.DescribeRegions
        Aws.Ec2.Commands.DescribeRouteTables
        Aws.Ec2.Commands.DescribeSecurityGroups
        Aws.Ec2.Commands.DescribeSubnets
        Aws.Ec2.Commands.DescribeTags
        Aws.Ec2.Commands.DescribeVolumeStatus
        Aws.Ec2.Commands.DescribeVolumes
        Aws.Ec2.Commands.DescribeVpcs
        Aws.Ec2.Commands.GetConsoleOutput
        Aws.Ec2.Commands.ImportKeyPair
        Aws.Ec2.Commands.ModifyInstanceAttribute
        Aws.Ec2.Commands.ModifyVpcAttribute
        Aws.Ec2.Commands.RevokeSecurityGroupIngress
        Aws.Ec2.Commands.RunInstances
        Aws.Ec2.Commands.StartInstances
        Aws.Ec2.Commands.StopInstances
        Aws.Ec2.Commands.TerminateInstances
        Aws.Elb
        Aws.Elb.Core
        Aws.Elb.TH
        Aws.Elb.Types
        Aws.Elb.Commands.CreateLoadBalancer
        Aws.Elb.Commands.DescribeInstanceHealth
        Aws.Elb.Commands.DescribeLoadBalancerPolicies
        Aws.Elb.Commands.DescribeLoadBalancerPolicyTypes
        Aws.Elb.Commands.DescribeLoadBalancers
        Aws.Elb.Commands.ModifyLoadBalancerAttributes
        Aws.Elb.Commands.RegisterInstancesWithLoadBalancer
        Aws.Elb.Commands.DeregisterInstancesFromLoadBalancer
        Aws.Elb.Commands.CreateAppCookieStickinessPolicy
        Aws.Elb.Commands.CreateLBCookieStickinessPolicy
        Aws.Elb.Commands.SetLoadBalancerPoliciesOfListener
        Aws.Elb.Commands.ConfigureHealthCheck
    build-depends:
        aeson
        , aws
        , base
        , base16-bytestring
        , base64-bytestring
        , blaze-builder
        , blaze-markup
        , byteable
        , bytestring
        , conduit-extra
        , containers
        , cryptohash
        , exceptions
        , http-conduit
        , http-types
        , iproute
        , mtl
        , resourcet
        , scientific
        , template-haskell
        , text
        , time
        , unordered-containers
        , vector
        , xml-conduit

        -- aeson                 >=0.8.0.2    &&  <1.5,
        -- aws                   >=0.9.4      &&  <0.22,
        -- base                  >=4.7        &&  <5,
        -- base16-bytestring     >=0.1.1.6    &&  <0.2,
        -- base64-bytestring     >=1.0.0.1    &&  <1.1,
        -- blaze-builder         >=0.4.0.1    &&  <0.5,
        -- blaze-markup          >=0.7.0.2    &&  <0.9,
        -- byteable              >=0.1.1      &&  <0.2,
        -- bytestring            >=0.10.4.0   &&  <0.11,
        -- conduit-extra         >=1.1.9.1    &&  <1.4,
        -- containers            >=0.5.5.1    &&  <0.7,
        -- cryptohash            >=0.11.6     &&  <0.12,
        -- exceptions            >=0.8.0.2    &&  <0.11,
        -- http-conduit          >=2.1.7.2    &&  <2.4,
        -- http-types            >=0.8.6      &&  <0.13,
        -- iproute               >=1.3.2      &&  <1.8,
        -- mtl                   >=2.1.3.1    &&  <2.3,
        -- resourcet             >=1.1.6      &&  <1.3,
        -- scientific            >=0.3.3.8    &&  <0.4,
        -- template-haskell      >=2.11       &&  <2.15,
        -- text                  >=1.2.0.6    &&  <1.3,
        -- time                  >=1.4.2      &&  <1.9,
        -- unordered-containers  >=0.2.5.1    &&  <0.3,
        -- vector                >=0.10.12.3  &&  <0.13,
        -- xml-conduit           >=1.2.6      &&  <1.9

    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -fno-warn-orphans

executable put-metric
    main-is: put-metric.hs
    build-depends:
        aws
        , aws-ec2
        , base
        , bytestring
        , optparse-applicative < 0.15
        , text

        -- aws                   >=0.9.4      &&  <0.22,
        -- aws-ec2               >=0.3.8      &&  <0.4,
        -- base                  >=4.7        &&  <5,
        -- bytestring            >=0.10.4.0   &&  <0.11,
        -- optparse-applicative  >=0.11.0.2   &&  <0.15,
        -- text                  >=1.2.0.6    &&  <1.3

    default-language: Haskell2010
    hs-source-dirs: cmd
    ghc-options: -static

executable run-inst
    main-is: run-inst.hs
    build-depends:
        aeson
        , aws
        , aws-ec2
        , base
        , bytestring
        , containers
        , optparse-applicative < 0.15
        , text
        , unordered-containers
        , vector
        , yaml

        -- aeson                 >=0.8.0.2    &&  <1.5,
        -- aws                   >=0.9.4      &&  <0.22,
        -- aws-ec2               >=0.3.8      &&  <0.4,
        -- base                  >=4.7        &&  <5,
        -- bytestring            >=0.10.4.0   &&  <0.11,
        -- containers            >=0.5.5.1    &&  <0.7,
        -- optparse-applicative  >=0.11.0.2   &&  <0.15,
        -- text                  >=1.2.0.6    &&  <1.3,
        -- unordered-containers  >=0.2.5.1    &&  <0.3,
        -- vector                >=0.10.12.3  &&  <0.13,
        -- yaml                  >=0.8.12     &&  <0.12

    default-language: Haskell2010
    hs-source-dirs: cmd
    ghc-options: -static
